@@ -16,7 +16,6 @@ import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * I'm a REST resource and handle liga CRUD requests over the HTTP protocol
@@ -62,7 +61,7 @@ public class LigatabelleService implements ServiceFacade {
 
         final List<LigatabelleDO> ligatabelleDOList = ligatabelleComponent.getLigatabelleVeranstaltung(id);
 
-        return ligatabelleDOList.stream().map(LigatabelleDTOMapper.toDTO).collect(Collectors.toList());
+        return ligatabelleDOList.stream().map(LigatabelleDTOMapper.toDTO).toList();
     }
 
     /**
@@ -81,7 +80,7 @@ public class LigatabelleService implements ServiceFacade {
 
         final List<LigatabelleDO> ligatabelleDOList = ligatabelleComponent.getLigatabelleWettkampf(id);
 
-        return ligatabelleDOList.stream().map(LigatabelleDTOMapper.toDTO).collect(Collectors.toList());
+        return ligatabelleDOList.stream().map(LigatabelleDTOMapper.toDTO).toList();
     }
 
 
