@@ -47,7 +47,6 @@ import org.springframework.web.bind.annotation.*;
 import java.security.Principal;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import javax.naming.NoPermissionException;
 
 /**
@@ -125,7 +124,7 @@ public class SyncService implements ServiceFacade {
 
         final List<LigatabelleDO> ligatabelleDOList = ligatabelleComponent.getLigatabelleVeranstaltung(id);
 
-        return ligatabelleDOList.stream().map(LigaSyncLigatabelleDTOMapper.toDTO).collect(Collectors.toList());
+        return ligatabelleDOList.stream().map(LigaSyncLigatabelleDTOMapper.toDTO).toList();
     }
 
 
@@ -144,7 +143,7 @@ public class SyncService implements ServiceFacade {
         logger.debug("Receive 'Wettkampfid for Matches' request with ID '{}'", wettkampfid);
         List<LigamatchDO> wettkampfMatches = matchComponent.getLigamatchDOsByWettkampfId(wettkampfid);
 
-        return wettkampfMatches.stream().map(LigaSyncMatchDTOMapper.toDTO).collect(Collectors.toList());
+        return wettkampfMatches.stream().map(LigaSyncMatchDTOMapper.toDTO).toList();
     }
 
 
@@ -211,8 +210,7 @@ public class SyncService implements ServiceFacade {
             }
         }
 
-        return mannschaftsmitgliedDOList.stream().map(LigaSyncMannschaftsmitgliedDTOMapper.toDTO).collect(
-                Collectors.toList());
+        return mannschaftsmitgliedDOList.stream().map(LigaSyncMannschaftsmitgliedDTOMapper.toDTO).toList();
     }
 
 
@@ -296,8 +294,7 @@ public class SyncService implements ServiceFacade {
 
 
        return ResponseEntity.ok(
-               savedMannschaftsMitglieder.stream().map(LigaSyncMannschaftsmitgliedDTOMapper.toDTO).collect(
-                       Collectors.toList()));
+               savedMannschaftsMitglieder.stream().map(LigaSyncMannschaftsmitgliedDTOMapper.toDTO).toList());
     }
 
     /**
@@ -340,10 +337,10 @@ public class SyncService implements ServiceFacade {
             // Set List<PasseDTO> to MatchDTO where MatchId is the same
             matchDTO.setPassen(ligaSyncPasseDTOs.stream().map(LigaSyncPasseDTOMapper.toPasseDTO)
                     .filter(passeDTO -> passeDTO.getMatchId().equals(ligasyncmatchDTO.getId()))
-                    .collect(Collectors.toList()));
+                    .toList());
             logger.debug("match und passe id : {} {}", matchDTO.getId(), matchDTO.getPassen().get(0).getMatchId() );
             for (PasseDTO passeDTO : matchDTO.getPassen()) {
-                passeDTO.setMatchNr(matchDTO.getNr());
+                passeDTO.setMatchNr(matchDTO.getMatchNr());
             }
             matchDTOs.add(matchDTO);
         }
@@ -359,7 +356,7 @@ public class SyncService implements ServiceFacade {
             for (int j = i + 1; j < matchDTOs.size(); j++) {
 
                 if (twoMatchesDTO.get(0).getWettkampfId().equals(matchDTOs.get(j).getWettkampfId()) &&
-                        twoMatchesDTO.get(0).getNr().equals(matchDTOs.get(j).getNr()) &&
+                        twoMatchesDTO.get(0).getMatchNr().equals(matchDTOs.get(j).getMatchNr()) &&
                         twoMatchesDTO.get(0).getBegegnung().equals(matchDTOs.get(j).getBegegnung())) {
 
                     twoMatchesDTO.add(matchDTOs.get(j));
