@@ -18,7 +18,7 @@ import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.logging.Logger;
 
 /**
  * @author Philip Dengler
@@ -32,7 +32,6 @@ public class DsbMannschaftComponentImpl implements DsbMannschaftComponent, DsbMa
     private static final String PRECONDITION_MSG_DSBMANNSCHAFT_VEREIN_ID = "DsbMannschaftDO Verein ID must not be negative";
     private static final String PRECONDITION_MSG_DSBMANNSCHAFT_NUMMER = "DsbMannschaftDO Nummer must not be negative";
     private static final String PRECONDITION_MSG_DSBMANNSCHAFT_BENUTZER_ID = "DsbMannschaftDO Benutzer Id must not be negative";
-    private static final String PRECONDITION_MSG_DSBMANNSCHAFT_VERANSTALTUNG_ID = "DsbMannschaftDO Veranstaltung ID must not be negative";
     private static final String PRECONDITION_MSG_CURRENT_DSBMANNSCHAFT = "Current dsbmannschaft id must not be negative";
     private static final String PRECONDITION_MSG_SORTIERUNG = "The Sortierung must not be null or negative";
     private static final String PRECONDITION_MSG_VERANSTALTUNGS_ID = "Veranstaltungs ID must not be negative";
@@ -71,8 +70,24 @@ public class DsbMannschaftComponentImpl implements DsbMannschaftComponent, DsbMa
     public List<DsbMannschaftDO> findAll() {
         final List<DsbMannschaftBE> dsbMannschaftBeList = dsbMannschaftDAO.findAll();
         return this.fillAllNames(dsbMannschaftBeList.stream()
-                .map(DsbMannschaftMapper.toDsbMannschaftDO).collect(Collectors.toList()));
+                .map(DsbMannschaftMapper.toDsbMannschaftDO).toList());
     }
+
+    @Override
+    public List<DsbMannschaftDO> findAllByWarteschlange() {
+        final List<DsbMannschaftBE> dsbMannschaftBeList = dsbMannschaftDAO.findAllByWarteschlange();
+        return this.fillAllNames(dsbMannschaftBeList.stream()
+                .map(DsbMannschaftMapper.toDsbMannschaftDO).toList());
+    }
+
+
+    @Override
+    public List<DsbMannschaftDO> findAllByName(String name) {
+        final List<DsbMannschaftBE> dsbMannschaftBeList = dsbMannschaftDAO.findAllByName(name);
+        return this.fillAllNames(dsbMannschaftBeList.stream()
+                .map(DsbMannschaftMapper.toDsbMannschaftDO).toList());
+    }
+
 
     @Override
     public List<DsbMannschaftDO> findAllByVereinsId(long id){
@@ -84,7 +99,7 @@ public class DsbMannschaftComponentImpl implements DsbMannschaftComponent, DsbMa
         }
 
         return fillAllNames(dsbMannschaftBeList.stream()
-                .map(DsbMannschaftMapper.toDsbMannschaftDO).collect(Collectors.toList()));
+                .map(DsbMannschaftMapper.toDsbMannschaftDO).toList());
     }
 
     @Override
@@ -97,7 +112,7 @@ public class DsbMannschaftComponentImpl implements DsbMannschaftComponent, DsbMa
         }
 
         return fillAllNames(dsbMannschaftBeList.stream()
-                .map(DsbMannschaftMapper.toDsbMannschaftDO).collect(Collectors.toList()));
+                .map(DsbMannschaftMapper.toDsbMannschaftDO).toList());
     }
 
     @Override
@@ -110,7 +125,18 @@ public class DsbMannschaftComponentImpl implements DsbMannschaftComponent, DsbMa
         }
 
         return fillAllNames(dsbMannschaftBeList.stream()
-                .map(DsbMannschaftMapper.toDsbMannschaftDO).collect(Collectors.toList()));
+                .map(DsbMannschaftMapper.toDsbMannschaftDO).toList());
+    }
+
+    public List<DsbMannschaftDO> findVeranstaltungAndWettkampfByID(long id){
+        Preconditions.checkArgument( id>= 0, PRECONDITION_MSG_WETTKAMPF_ID);
+        final List<DsbMannschaftBE> dsbMannschaftBeList = dsbMannschaftDAO.findVeranstaltungAndWettkampfById(id);
+        if(dsbMannschaftBeList == null){
+            throw new BusinessException(ErrorCode.ENTITY_NOT_FOUND_ERROR,
+                    String.format(EXCEPTION_NO_RESULTS, id));
+        }
+        return dsbMannschaftBeList.stream()
+                .map(DsbMannschaftMapper.toDsbMannschaftVerUWettDO).toList();
     }
 
 
@@ -130,11 +156,11 @@ public class DsbMannschaftComponentImpl implements DsbMannschaftComponent, DsbMa
 
 
     @Override
-    public DsbMannschaftDO create(final DsbMannschaftDO dsbMannschaftDO, final long currentDsbMannschaftId) {
-        checkDsbMannschaftDO(dsbMannschaftDO, currentDsbMannschaftId);
+    public DsbMannschaftDO create(final DsbMannschaftDO dsbMannschaftDO, final long currentUserId) {
+        checkDsbMannschaftDO(dsbMannschaftDO, currentUserId);
 
         final DsbMannschaftBE dsbMannschaftBE = DsbMannschaftMapper.toDsbMannschaftBE.apply(dsbMannschaftDO);
-        final DsbMannschaftBE persistedDsbMannschaftBE = dsbMannschaftDAO.create(dsbMannschaftBE, currentDsbMannschaftId);
+        final DsbMannschaftBE persistedDsbMannschaftBE = dsbMannschaftDAO.create(dsbMannschaftBE, currentUserId);
 
         return fillName(DsbMannschaftMapper.toDsbMannschaftDO.apply(persistedDsbMannschaftBE));
     }
@@ -142,27 +168,27 @@ public class DsbMannschaftComponentImpl implements DsbMannschaftComponent, DsbMa
 
 
     @Override
-    public DsbMannschaftDO update(final DsbMannschaftDO dsbMannschaftDO, final long currentDsbMannschaftId) {
-        checkDsbMannschaftDO(dsbMannschaftDO, currentDsbMannschaftId);
+    public DsbMannschaftDO update(final DsbMannschaftDO dsbMannschaftDO, final long currentUserId) {
+        checkDsbMannschaftDO(dsbMannschaftDO, currentUserId);
         Preconditions.checkArgument(dsbMannschaftDO.getId() >= 0, PRECONDITION_MSG_DSBMANNSCHAFT_ID);
         checkSortierung(dsbMannschaftDO); //To avoid corruption of the Sortierung
 
         final DsbMannschaftBE dsbMannschaftBE = DsbMannschaftMapper.toDsbMannschaftBE.apply(dsbMannschaftDO);
-        final DsbMannschaftBE persistedDsbMannschaftBE = dsbMannschaftDAO.update(dsbMannschaftBE, currentDsbMannschaftId);
+        final DsbMannschaftBE persistedDsbMannschaftBE = dsbMannschaftDAO.update(dsbMannschaftBE, currentUserId);
 
         return fillName(DsbMannschaftMapper.toDsbMannschaftDO.apply(persistedDsbMannschaftBE));
     }
 
 
     @Override
-    public void delete(final DsbMannschaftDO dsbMannschaftDO, final long currentDsbMannschaftId) {
+    public void delete(final DsbMannschaftDO dsbMannschaftDO, final Long currentUserId) {
         Preconditions.checkNotNull(dsbMannschaftDO, PRECONDITION_MSG_DSBMANNSCHAFT);
         Preconditions.checkArgument(dsbMannschaftDO.getId() >= 0, PRECONDITION_MSG_DSBMANNSCHAFT_ID);
-        Preconditions.checkArgument(currentDsbMannschaftId >= 0, PRECONDITION_MSG_CURRENT_DSBMANNSCHAFT);
+        Preconditions.checkArgument(currentUserId >= 0, PRECONDITION_MSG_CURRENT_DSBMANNSCHAFT);
 
         final DsbMannschaftBE dsbMannschaftBE = DsbMannschaftMapper.toDsbMannschaftBE.apply(dsbMannschaftDO);
 
-        dsbMannschaftDAO.delete(dsbMannschaftBE, currentDsbMannschaftId);
+        dsbMannschaftDAO.delete(dsbMannschaftBE, currentUserId);
 
     }
 
@@ -174,8 +200,9 @@ public class DsbMannschaftComponentImpl implements DsbMannschaftComponent, DsbMa
      * @return the same Mannschaften as given but with their names filled.
      */
     private List<DsbMannschaftDO> fillAllNames(List<DsbMannschaftDO> mannschaften){
-        return mannschaften.stream().map(this::fillName).collect(Collectors.toList());
+        return mannschaften.stream().map(this::fillName).toList();
     }
+
 
     /**
      * I set the attribute 'name' of the given Mannschaft by loading the corresponding Verein.
@@ -196,14 +223,12 @@ public class DsbMannschaftComponentImpl implements DsbMannschaftComponent, DsbMa
     }
 
 
-    private void checkDsbMannschaftDO(final DsbMannschaftDO dsbMannschaftDO, final long currentDsbMannschaftId) {
+    private void checkDsbMannschaftDO(final DsbMannschaftDO dsbMannschaftDO, final long currentUserId) {
         Preconditions.checkNotNull(dsbMannschaftDO, PRECONDITION_MSG_DSBMANNSCHAFT);
-        Preconditions.checkArgument(currentDsbMannschaftId >= 0, PRECONDITION_MSG_CURRENT_DSBMANNSCHAFT);
+        Preconditions.checkArgument(currentUserId >= 0, PRECONDITION_MSG_DSBMANNSCHAFT_BENUTZER_ID);
         Preconditions.checkArgument(dsbMannschaftDO.getVereinId() >= 0, PRECONDITION_MSG_DSBMANNSCHAFT_VEREIN_ID);
         Preconditions.checkArgument(dsbMannschaftDO.getNummer() >= 0, PRECONDITION_MSG_DSBMANNSCHAFT_NUMMER);
         Preconditions.checkArgument(dsbMannschaftDO.getBenutzerId() >= 0, PRECONDITION_MSG_DSBMANNSCHAFT_BENUTZER_ID);
-        Preconditions.checkArgument(dsbMannschaftDO.getVeranstaltungId() >= 0, PRECONDITION_MSG_DSBMANNSCHAFT_VERANSTALTUNG_ID);
-
     }
 
     //for sorting:
@@ -288,7 +313,7 @@ public class DsbMannschaftComponentImpl implements DsbMannschaftComponent, DsbMa
         final List<DsbMannschaftBE> lastMannschaftList = dsbMannschaftDAO.findAllByVeranstaltungsId(lastVeranstaltungId);
 
         List<DsbMannschaftDO> lastMListDO = fillAllNames(lastMannschaftList.stream()
-                .map(DsbMannschaftMapper.toDsbMannschaftDO).collect(Collectors.toList()));
+                .map(DsbMannschaftMapper.toDsbMannschaftDO).toList());
 
         // creates a new database entry for every Mannschaft with the current VeranstaltungId
         List<DsbMannschaftDO> addedMannschaftenList = new ArrayList<>();
@@ -299,7 +324,7 @@ public class DsbMannschaftComponentImpl implements DsbMannschaftComponent, DsbMa
 
             addedMannschaftenList.add(mannschaftToCheck);
             final DsbMannschaftBE dsbMannschaftBE = DsbMannschaftMapper.toDsbMannschaftBE.apply(mannschaftToCheck);
-            DsbMannschaftBE addedMannschaft = dsbMannschaftDAO.create(dsbMannschaftBE, currentVeranstaltungId);
+            DsbMannschaftBE addedMannschaft = dsbMannschaftDAO.create(dsbMannschaftBE, userId);
             // Copy Mannschaftsmitglieder for every Mannschaft
             // following lines of code are not outsourced because we currently assume that they are not needed anywhere else
             MannschaftsmitgliedDO addedMitglied;
@@ -315,7 +340,7 @@ public class DsbMannschaftComponentImpl implements DsbMannschaftComponent, DsbMa
 
 
     @Override
-    public void copyMitgliederFromMannschaft(long oldMannschaftsID, long newMannschaftsID) {
+    public void copyMitgliederFromMannschaft(long oldMannschaftsID, long newMannschaftsID, long userId) {
 
         List<MannschaftsmitgliedDO> alteMitglieder = mannschaftsmitgliedComponent.findByTeamId(oldMannschaftsID);
 
@@ -323,7 +348,7 @@ public class DsbMannschaftComponentImpl implements DsbMannschaftComponent, DsbMa
         for(MannschaftsmitgliedDO altesMitglied : alteMitglieder) {
             neuesMitglied = altesMitglied;
             neuesMitglied.setMannschaftId(newMannschaftsID);
-            mannschaftsmitgliedComponent.create(neuesMitglied, 0L);
+            mannschaftsmitgliedComponent.create(neuesMitglied, userId);
         }
 
     }
